@@ -1,9 +1,13 @@
-2006-06-31  Mickael Remond  <mickael.remond@process-one.net>
+2006-06-02  Mickael Remond  <mickael.remond@process-one.net>
 
 	* src/web/ejabberd_http_poll.erl: Messages polled between the
 	the last client request and the polling timeout were lost. Those
 	messages are now resent using ejabberd routing mechanisms.
 
+	* src/web/ejabberd_http.erl: The web module now accepts HTTP
+	absolute URL (used behind a proxy). This apply to HTTP polling and
+	to the web interface (Thanks to Jean-Sebastien Pedron).
+	
 2006-05-29  Mickael Remond  <mickael.remond@process-one.net>
 
 	* src/mod_roster.erl: According to RFC3921 section 9.2, outbound
